# ab_explorer

./: .gitignore  AGENTS.md  README.md  exp_a_run_report.md  pyproject.toml
abx/: cli.py  evaluator.py  experiment.py  kpi.py  llm.py  models.py  population.py  self_optimizer.py  storage.py  test_generator.py  utils.py
tests/: exp_a_tests.json  self_optimization_tests.json  test_cli.py  test_evaluator.py  test_experiment.py  test_kpi.py  test_llm.py  test_models.py  test_population.py  test_storage.py  test_test_generator.py  test_utils.py
