[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abx"
version = "0.1.0"
description = "A/B testing CLI tool for prompt optimization using genetic algorithms"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
abx = "abx.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["abx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
